refactor: 보따리 템플릿 목록 조회 최신순 정렬 적용
Co-authored-by: yehyeokbang <qkddpgur318@gmail.com>